서버정보 감추기, method 제한 error 페이지

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,8 +3,22 @@ server {
     index index.php index.html;
     root /var/www/public;
 
+    # error page (2018.04.24 KKW)
+    fastcgi_intercept_errors on;
+    error_page 403 /error/403.html;
+
+    # hide server info (2018.04.24 KKW)
+    server_tokens off;
+    fastcgi_hide_header X-Powered-By;
+    proxy_hide_header X-Powered-By;
+
     location / {
         try_files $uri /index.php?$args;
+
+        # method (2018.04.24 KKW)
+        limit_except GET POST {
+            deny all;
+        }
     }
 
     location ~ \.php$ {
@@ -15,4 +29,5 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
+
 }
