엑셀다운로드, 반려시 메일발송

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "doctrine/dbal": "^2.7",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "~2.1.0",
         "pragmarx/google2fa": "^3.0",
         "unisharp/laravel-ckeditor": "^4.7",
         "zizaco/entrust": "5.2.x-dev",
