--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "2.4",
         "fzaninotto/faker": "~1.4",
+        "laravel/dusk": "^1.0",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7"
     },
